--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,16 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+configurations.all {
+    resolutionStrategy {
+        eachDependency {
+            if ((requested.group == "org.jetbrains.kotlin") && (requested.name.startsWith("kotlin-stdlib"))) {
+                useVersion("1.8.0")
+            }
+        }
+    }
+}
+
 android {
     namespace "com.harishkunchala.flutter_location_geolocator_riverpod"
     compileSdk flutter.compileSdkVersion
